<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="ground">广场</string>
    <string name="post">发布</string>
    <string name="my">我的</string>
    <string name="search">搜索</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_by_username">用户登录</string>
    <string name="login_success">登录成功</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register_username">用户注册</string>
    <string name="nickname">昵称</string>
    <string name="accept_eula">已阅读并同意 <font color='#596B8E'>软件许可及服务协议</font></string>
    <string name="finish">完成</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="accept_eula_first">请先同意软件许可及用户协议</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="ask_save_changes">保存本次编辑？</string>
    <string name="save">保存</string>
    <string name="do_not_save">不保存</string>
    <string name="detail">详情</string>
    <string name="detail_contact_info">联系方式\n联系人：%s\n电话：%s</string>
    <string name="lost">丢失</string>
    <string name="found">寻获</string>
    <string name="submit">发布</string>
    <string name="reset">重置</string>
    <string name="item_name">物品名称</string>
    <string name="item_desc">物品描述</string>
    <string name="image_upload">图片上传</string>
    <string name="personal_info">个人信息</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="update_password">更新密码</string>
    <string name="contact_name">联系人名称</string>
    <string name="contact_number">联系人电话</string>
    <string name="set_username">设置用户名</string>
    <string name="set_contact_name">设置联系人名称</string>
    <string name="set_contact_number">设置联系人电话</string>
    <string name="dial_number">拨打电话</string>
    <string name="update_info">更新信息</string>
    <string name="mark_as_resolved">标记为已解决</string>
    <string name="logout">登出</string>
    <string name="logout_sure">真的要退出登录吗？</string>
    <string name="update_info_success">更新信息成功</string>
    <string name="dialog_ok">好的</string>
    <string name="cannot_submit">无法发布</string>
    <string name="cannot_submit_desc">在发布信息前，请先在个人设置中补全联系人姓名及电话信息。</string>
    <string name="my_submits">我的发布</string>
    <string name="filter_type">过滤类型</string>
    <string name="cancel_blue"><font color='#566E8f'>取消</font></string>
    <string name="recent_submits">最近发布</string>
    <string name="search_first">请先发起搜索</string>
    <string name="mark_as_unresolved">标记为未解决</string>
    <string name="mark_as_resolved_sure">要将该发布标记为已解决吗？</string>
    <string name="mark_as_unresolved_sure">要将该发布标记为未解决吗？</string>
    <string name="no_image">无图片</string>
    <string name="no_image_confirm">确定要不添加图片直接提交吗？</string>
    <string name="submit_success">发布成功</string>
    <string name="not_set">未设置</string>
</resources>