<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:backgroundTint="?colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/submit"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="@+id/btn_back" />

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/icon_red"
            android:paddingStart="13dp"
            android:paddingTop="6dp"
            android:paddingEnd="13dp"
            android:paddingBottom="6dp"
            android:text="@string/reset"
            android:textColor="@drawable/text_color_button"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_finish"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_button"
            android:paddingStart="13dp"
            android:paddingTop="6dp"
            android:paddingEnd="13dp"
            android:paddingBottom="6dp"
            android:text="@string/finish"
            android:textColor="@drawable/text_color_button"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/item_name"
            android:selectAllOnFocus="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/etl_name"
        app:layout_constraintStart_toStartOf="@+id/etl_name"
        app:layout_constraintTop_toBottomOf="@id/etl_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:autofillHints=""
            android:hint="@string/item_desc"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:maxHeight="250dp"
            android:selectAllOnFocus="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/etl_name"
        app:layout_constraintStart_toStartOf="@+id/etl_name"
        app:layout_constraintTop_toBottomOf="@+id/etl_desc">

        <ToggleButton
            android:id="@+id/toggle_lost_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textOff="@string/lost"
            android:textOn="@string/found"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_upload"
            app:layout_constraintStart_toStartOf="@+id/tv_upload"
            app:layout_constraintTop_toBottomOf="@+id/tv_upload" />

        <TextView
            android:id="@+id/tv_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1 "
            android:gravity="center"
            android:text="@string/image_upload"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_selected"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/highlight_border"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_upload"
            app:layout_constraintEnd_toEndOf="@+id/btn_upload"
            app:layout_constraintStart_toStartOf="@+id/btn_upload"
            app:layout_constraintTop_toTopOf="@+id/btn_upload" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="32dp"
            android:background="#4f000000"
            android:padding="64dp"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_upload"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>